k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observ
  namespace: observ
  labels:
    app: observ
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: observ.testkube.do-polytech.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observ
            port:
              number: 80
  tls:
  - hosts:
    - observ.testkube.do-polytech.fr
    secretName: observ-tls
